email fix and download files