@@ -1,4 +1,6 @@
 package com.example.studentssocial.service;
+
+import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.nio.file.Files;
@@ -15,30 +17,61 @@ import org.springframework.web.multipart.MultipartFile;
 @Service
 public class FileStorageServiceImpl implements FileStorageService {
 
-    private final Path root = Paths.get("uploads");
+    private final String ROOT_NAME = "uploads";
+    private final Path root = Path.of("uploads");
 
     @Override
-    public void init() {
+    public void save(MultipartFile file, String filePath, String fileName) {
         try {
-            Files.createDirectory(root);
-        } catch (IOException e) {
-            throw new RuntimeException("Could not initialize folder for upload!");
+            Files.copy(file.getInputStream(), Path.of(filePath).resolve(fileName));
+        } catch (Exception e) {
+            throw new RuntimeException("Could not store the file. Error: " + e.getMessage());
         }
     }
 
+    public boolean checkIfFileNameExists(String filename, String filePath) {
+        return Files.exists(Path.of(filePath + File.separator + filename));
+    }
+
     @Override
-    public void save(MultipartFile file) {
+    public String generateNameForExistingFile(String fileName, String filePath) {
         try {
-            Files.copy(file.getInputStream(), this.root.resolve(file.getOriginalFilename()));
+
+            String[] fileNameSplitted = fileName.split("\\.");
+            String extension = "";
+            String fileNameTruncated = fileName;
+            if (fileNameSplitted.length > 1) {
+
+                extension = fileNameSplitted[fileNameSplitted.length - 1];
+                fileNameTruncated = fileName.substring(0, fileName.length() - (extension.length() + 1));
+            }
+            return fileNameTruncated + "_copy." + extension;
+
         } catch (Exception e) {
             throw new RuntimeException("Could not store the file. Error: " + e.getMessage());
         }
     }
 
     @Override
-    public Resource load(String filename) {
+    public String getRootPath() {
+        return this.ROOT_NAME;
+    }
+
+    @Override
+    public void checkAndAddFolder(String folderName) {
         try {
-            Path file = root.resolve(filename);
+            if (!Files.exists(Path.of(folderName))) {
+                Files.createDirectory(Path.of(folderName));
+            }
+        } catch (IOException e) {
+            throw new RuntimeException("Could not initialize folder for upload!");
+        }
+    }
+
+    @Override
+    public Resource load(String filename,String subjectName) {
+        try {
+            Path file = root.resolve(subjectName+File.separator + filename);
             Resource resource = new UrlResource(file.toUri());
 
             if (resource.exists() || resource.isReadable()) {
